--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # AI Quant Research Hub (AIQRH) - MVP Dependencies
+# Python Version: 3.10+
 
 # Core
-python>=3.10
 pyyaml>=6.0
 
 # Data
@@ -45,7 +45,7 @@ python-multipart>=0.0.6
 
 # Auth
 python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
+bcrypt>=4.0.0
 
 # Database
 motor>=3.3.0
