--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ pytest-asyncio>=0.21.0
 fastapi>=0.104.0
 uvicorn>=0.24.0
 pydantic>=2.5.0
+pydantic-settings>=2.1.0
 python-multipart>=0.0.6
 
 # Auth
@@ -49,3 +50,4 @@ bcrypt>=4.0.0
 
 # Database
 motor>=3.3.0
+pymongo>=4.5.0
